[gd_scene load_steps=8 format=3 uid="uid://cuifra52kkek"]

[ext_resource type="Script" uid="uid://b75xge8xdomov" path="res://gdre_media_player.gd" id="1_3jmtn"]
[ext_resource type="Theme" uid="uid://crq1fwn0ajw7b" path="res://gdre_theme.tres" id="1_ykcsx"]
[ext_resource type="Texture2D" uid="uid://fk0s8roleyid" path="res://gdre_icons/gdre_Play.svg" id="2_u82do"]
[ext_resource type="Script" uid="uid://qmyh4wh5voec" path="res://gdre_audio_preview_box.gd" id="3_ooril"]
[ext_resource type="Texture2D" uid="uid://b2l0m3p42t05e" path="res://gdre_icons/gdre_Pause.svg" id="3_ykcsx"]
[ext_resource type="Texture2D" uid="uid://cdhnddtchuo2h" path="res://gdre_icons/gdre_Stop.svg" id="4_hkamq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wtasi"]
bg_color = Color(0, 0, 0, 1)

[node name="MediaPlayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ykcsx")
script = ExtResource("1_3jmtn")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="BarHBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.033
anchor_top = 1.0
anchor_right = 0.954
anchor_bottom = 1.0
offset_left = -0.0159988
offset_top = -89.0
offset_right = 0.991943
offset_bottom = -58.0

[node name="TimeLabel" type="Label" parent="BarHBox"]
layout_direction = 2
layout_mode = 2
text = "0:00.0 / 0:00.0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Spacer" type="Label" parent="BarHBox"]
layout_mode = 2
text = " "

[node name="ProgressBar" type="HSlider" parent="BarHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
step = 0.1

[node name="MediaControlsHBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -61.0
offset_right = 64.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Play" type="Button" parent="MediaControlsHBox"]
layout_mode = 2
theme_type_variation = &"FlatButton"
icon = ExtResource("2_u82do")
flat = true

[node name="Pause" type="Button" parent="MediaControlsHBox"]
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"FlatButton"
disabled = true
icon = ExtResource("3_ykcsx")
flat = true

[node name="Stop" type="Button" parent="MediaControlsHBox"]
layout_mode = 2
theme_type_variation = &"FlatButton"
icon = ExtResource("4_hkamq")
flat = true

[node name="AudioViewBox" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 2

[node name="AudioPreviewBox" type="ColorRect" parent="AudioViewBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.14902, 0.176471, 1)
script = ExtResource("3_ooril")
metadata/_custom_type_script = ExtResource("3_ooril")

[node name="AudioStreamInfo" type="Label" parent="AudioViewBox"]
layout_direction = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -155.0
offset_top = -43.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 14
text = "Sampling Rate: 48000
Loop: No"

[node name="VideoViewBox" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="VideoViewBox"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 1.7778

[node name="BG" type="Panel" parent="VideoViewBox/AspectRatioContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wtasi")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="VideoViewBox/AspectRatioContainer"]
custom_minimum_size = Vector2(16, 9)
layout_mode = 2
expand = true
